Fixed z-index of gifs and its size

--- a/src/stylings/about/Presentation.scss
+++ b/src/stylings/about/Presentation.scss
@@ -122,6 +122,7 @@
         flex-direction: column;
         justify-content: flex-end;
         align-items: center;
+        z-index: 1;
 
         .achievements {
             cursor: pointer;
@@ -185,23 +186,23 @@
         }
 
         .gif-wrap {
-            height: calc(100% - 250px);
+            height: 30%;
             width: 100%;
+            z-index: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
 
-            img {
-                animation: walkingAnimation 12s ease-in-out infinite;
-                transform: translateX(-70%);
+            .gif-border {
                 width: 100%;
-                height: 45%;
-                object-fit: contain;
-            }
+                height: 100%;
 
-            .walking.shs {
-                height: 55%;
-            }
-
-            .walking.college {
-                height: 45%;
+                img {
+                    animation: walkingAnimation 20s ease-in-out infinite;
+                    transform: translateX(-200%);
+                    height: 80%;
+                    object-fit: fill;
+                }
             }
         }
     }
@@ -255,6 +256,7 @@
             flex-direction: column;
             justify-content: flex-start;
             height: 100%;
+            animation: fadeIn 1.5s ease-in-out;
 
             label {
                 font-family: "Shadows Into Light", cursive;
