--- a/src/stylings/keyframes/Keyframes.scss
+++ b/src/stylings/keyframes/Keyframes.scss
@@ -121,8 +121,8 @@
 }
 
 @keyframes walkingAnimation {
-    0% { transform: translateX(-70%); }
-    100% { transform: translateX(80%); }
+    0% { transform: translateX(-220%); }
+    100% { transform: translateX(220%); }
 }
 
 @keyframes achievementAppearDisappear {
